# docs-server

./: .gitignore  Makefile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
.github/workflows/: linter.yaml
docs/: Makefile  pyproject.toml
docs/source/: conf.py  deployment.rst  installation.rst
e2e/src/: app.e2e-spec.ts
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  repo-manifest.ts  repo.ts
src/app/components/page-not-found/: page-not-found.component.css  page-not-found.component.html
src/app/components/repo-iframe/: repo-iframe.component.css  repo-iframe.component.spec.ts  repo-iframe.component.ts
src/app/components/sidenav/: sidenav.component.css  sidenav.component.html  sidenav.component.ts
src/app/components/toolbar/: toolbar.component.css  toolbar.component.html  toolbar.component.ts
src/app/material/: material.module.ts
src/app/navigation/: navigation.component.css  navigation.component.html
src/app/services/: content.service.ts  repo.service.ts  sidenav.service.ts  site-config.service.ts
src/assets/serve/docs-server/: adding-sites.html  deployment.html  getting-started.html  index.html  search.html  searchindex.js
src/assets/serve/docs-server/_sources/: adding-sites.rst.txt  index.rst.txt
